mame (0.199+dfsg.1-2) UNRELEASED; urgency=medium

  * Use system libasio and libpugixml. Update B-D accordingly.

 -- Jordi Mallach <jordi@debian.org>  Mon, 23 Jul 2018 16:40:48 +0200

mame (0.199+dfsg.1-1) unstable; urgency=medium

  * New upstream release.

 -- Jordi Mallach <jordi@debian.org>  Fri, 20 Jul 2018 16:25:34 +0200

mame (0.196+dfsg.1-1) unstable; urgency=medium

  * New upstream release.
  * Update Vcs-* fields to reflect migration to salsa.debian.org.
  * Remove fix_c_fallback.patch, which was taken from git.

 -- Jordi Mallach <jordi@debian.org>  Fri, 20 Jul 2018 12:13:33 +0200

mame (0.195+dfsg.1-2) unstable; urgency=medium

  [ Cesare Falco ]
  * Use Gold linker and set ld flags to reduce memory.

  [ Jordi Mallach ]
  * Add B-D-I on python3-distutils so Sphynx works as expected.
  * Move links and doc-base paths to new default location of docs.
  * Add patch to fix an infinite loop in the fallback C code for
    mips*, arm*, s390x, and other arches with no native ASM. This
    fixes the validation tests for the check build rule.
  * Set OPTIMIZE=2 to avoid memory exhaustion on i386 builds.
  * Upload to unstable, rapidjson (>= 1.0) is now available there.

 -- Jordi Mallach <jordi@debian.org>  Thu, 22 Mar 2018 22:26:55 +0100

mame (0.195+dfsg.1-1) experimental; urgency=medium

  [ Cesare Falco ]
  * New upstream release.
  * Use Gold linker and set ld flags to reduce memory requirements

  [ Jordi Mallach ]
  * Reinstate check rule, as a failure to run indicates grave problems
    in the generated binary.
  * Remove transitional mess package again, as mess-desktop-entries has
    been fixed.
  * Use system libglm, rapidjson and utf8proc. Drop definitions for system
    libuv which is no longer used (closes: #892559).
  * Drop avoid_linenoise.patch and build definitions, as the bundled
    linenoise fork no longer has GPL-incompatible material.
  * Apply several formatting fixes to copyright file.
  * Bump debhelper compat to v11.
