@@ -1,6 +1,7 @@
 mame (0.199+dfsg.1-2) UNRELEASED; urgency=medium
 
   * Use system libasio and libpugixml. Update B-D accordingly.
+  * Make use of the gold linker conditional to availability.
 
  -- Jordi Mallach <jordi@debian.org>  Mon, 23 Jul 2018 16:40:48 +0200
 
